css/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: font-family: 'Archivo', sans-serif;;
}
header{
    position: fixed;
    width: 100%;
}
nav{
    overflow: auto;
    background: #12425E;
    height: 80px;
}
ul{
    padding-left: 150px;
    list-style: none;
}
li{
    float: right;
    margin-top: 10px;
}
.logoimg{
    position: absolute;
    margin: 0 0 50px 12px;
}
nav a{
    display: block;
    width: 150px;
    padding: 20px 15px;
    color: #ECE5CF;
    text-align: center;
    text-decoration: none;
}
nav a:hover{
    background-color: #1a628b;
    color: #ECE5CF;
    transition: 0.2s;
    text-decoration: underline; 
}
/* end of nav */

/* hero */
#hero{
    background-image: url(../img/pexels-avonne-stalling-6018299.jpg);
    width: 100%;
    height: 500px;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}
.hero.txt{
    color: #ECE5CF;
    float: right;
    text-align: right;
    margin-right: 15px;
}
.hero.txt h1{
    font-size: 64px;
    font-family: 'Playfair Display', serif;;
    padding-top: 140px;
    padding-right: 15px;
}
.hero.txt p{
    font-size: 25px;
    padding: 30px 0;
}
.hero.txt a{
    background-color: #12425E;
    color: #ECE5CF;
    padding: 15px 40px;
    text-decoration: none;
}
.hero.txt a:hover{
    background-color: #1a628b;
    color: #ECE5CF;
    text-decoration: none;
    transition: 0.2s;
}
/* end of hero */

/* collection section */
#collection{
    clear: both;
}
#collection h1{
    font-size: 64px;
    font-family: 'Playfair Display', serif;
    text-align: center;
    padding: 45px 45px 20px 45px;
    /* font-family: ; */
}
#collection hr{
    border: 0;
    border-top: 1px solid #000000;
    margin: 20px 550px; padding-bottom: 20px;
}
#collection div{
    float: left;
    width: 33.33%;
    margin: auto;
    padding: 20px 0;
    text-align: center;
    position: relative;
}
#collection:after {
    content: "";
    display: table;
    clear: both;
  }
#collection img{
    opacity: 1;
    height: auto;
    transition: .5s ease;
    backface-visibility: hidden;
    filter: brightness(0.7);
}
#collection img:hover{
    opacity: 0.3;
}
#collection h2{
    position: absolute;
    color: #ECE5CF;
    font-size: 35px;
    font-family: 'Playfair Display', serif;
    /* text-shadow: 2px 2px #000000; */
}
#collection a{
    position: absolute;
    background-color: #12425E;
    padding: 10px 30px;
    color: #ECE5CF;
    text-align: center;
    text-decoration: none;
}
#collection a:hover{
    transition: .2s ease;
    background-color: #1a628b;
    
}
.anniversary h2 {
    top: 40%;
    left: 26%;
}
.anniversary a {
    top: 55%;
    left: 38%;
}
.everyday h2 {
    top: 40%;
    left: 35%;
}
.everyday a {
    top:  54%;
    left: 40%;
}
.birthday h2 {
    top: 40%;
    left: 35%;
}
.birthday a {
    top: 55%;
    left: 40%;
}
/* end of collection section */

/* Video */
#vidcontainer div {
    float: left;
    margin: 60px 0 0 80px;
}
#vidcontainer:after {
    content: "";
    display: table;
    clear: both;
}
.vidtxt{
    text-align: center;
}
.vidtxt h2 {
    font-size: 36px;
    font-family: 'Playfair Display', serif;
}
.vidtxt p {
    margin: 40px 0 40px 0;
    line-height: 2.5;
}
.vidtxt a {
    background-color: #12425E;
    color: #ECE5CF;
    padding: 15px 40px;
    margin-top: 5px;
    text-decoration: none;
}
.vidtxt a:hover {
    background-color: #1a628b;
    color: #ECE5CF;
    text-decoration: none;
    transition: 0.2s;
}
/* end of video */

/* august */
#August h1{
    font-size: 64px;
    font-family: 'Playfair Display', serif;
    clear: left;
    margin: 15px;
    padding: 40px 0;
    text-align: center;
}
#August span {
    font-size: 26px;
    display: block;
    text-align: end;
    padding: 20px;
}
#August div{
    float: left;
    width: 22%;
    margin-left: 30px;
    text-align: center;
  }
     /* Clear floats after the columns */
  #August:after {
    content: "";
    display: table;
    clear: both;
  }
  #August h2 {
    display: flex;
    overflow: auto;
    float: left;
    font-family: 'Playfair Display', serif;
    padding-right: 70px;
    margin: 0 50px 20px 20px;
  }
  #August span > a {
    color: #12425E;
  }
  .column a{
    display: block;
    background-color: #12425E;
    padding: 10px 30px;
    margin: 30px 70px 0 70px;
    color: #ECE5CF;
    text-align: center;
    text-decoration: none;
  }
/* end of august */

/* Maps */
#mapcontainer div{
    float: right;
}
#mapcontainer:after {
    content: "";
    display: table;
    clear: both;
}
#mapcontainer h2{
    font-size: 48px;
    text-align: center;
    margin: 100px 0 30px 0;
    font-family: 'Playfair Display', serif;
}
#mapcontainer span{
    text-align: start;
    font-weight: bold;
    margin: 40px 0 30px 40px;
}
#mapcontainer li {
    float: left;
    display: block;
   line-height: 2; 
   
}
/* end of maps */

/* review */
#review h1 {
    font-size: 48px;
    text-align: center;
    font-family: 'Playfair Display', serif;
    margin: 50px 0px 0px 20px;
}
#review p {
    margin: 40px 0 0 20px;
    font-size: 20px;
}
#review a{
    font-size: 26px;
    display: block;
    text-align: end;
    padding: 20px;
}

.avatar {
    max-width: 350px;
    margin: 20px 35px;
    padding: 35px;
    text-align: center;
    border: 2px solid #ECE5CF;
    box-sizing: border-box;
    float: left;
}
.avatar p {
    margin: 10px;
}
.avatar a {
    color: #000000;
    font-size: 20px;
    margin: 20px 0 0 20px;
    text-decoration: none;
    text-align: left;
}
.avatar img{
    border-radius: 50%;
}
.checked {
    margin-bottom: 20px;
    color: #e9bf55;
  }
/* end of review */

/* footer */
footer {
    width: 100%;
    display: inline-block;
    background: #ccc;
    height: 150px;
    text-align: center;
    font-size: 22px;
    font-weight: 700;
    text-decoration: underline;
  }
  
  .footercontainer {
    background-color: #12425E;
    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
    box-sizing: border-box;
    width: 100%;
    text-align: left;
    font: normal 16px 'Archivo', sans-serif;
    padding: 45px 50px;
  }
  
  .footercontainer .left p {
    color: #1a628b;
    font-size: 14px;
    margin: 0;
  }
  /* Footer links */
  
  .footercontainer p.links {
    font-size: 18px;
    font-weight: bold;
    color: #ECE5CF;
    margin: 0 0 10px;
    padding: 0;
    transition: ease .25s;
  }
  
  .footercontainer .links a {
    display: inline-block;
    line-height: 1.8;
    text-decoration: none;
    color: inherit;
    transition: ease .25s;
  }
    /* makes line btwn  links*/
  .footercontainer .links a:before {
    content: "|";
    font-size: 20px;
    left: 0;
    color: #fff;
    display: inline-block;
    padding: 0 20px;
  }
  
  .footercontainer .links .link-1:before {
    content: none;
  }
  
  .footercontainer .right {
    float: right;
    margin-top: 6px;
    max-width: 180px;
  }
  
  .footercontainer .right a {
    display: inline-block;
    width: 35px;
    height: 35px;
    background-color: #12425E;
    border-radius: 2px;
    font-size: 20px;
    color: #ECE5CF;
    text-align: center;
    line-height: 35px;
    margin-left: 3px;
    transition:all .25s;
  }
  .footercontainer .right a:hover {
    transform:scale(1.1);
}
  .footercontainer .links a:hover {
    text-decoration:underline;
}
/* end */

